--- a/demo/topcoat-mobile-dark.html
+++ b/demo/topcoat-mobile-dark.html
@@ -25,7 +25,8 @@
           </nav>
           <div class="combo">
             <select class="docNav">
-              <option value="index.html">Topcoat Desktop Dark</option>
+              <option value="index.html">Collectme Mobile</option>
+              <option value="topcoat-desktop-dark.html">Topcoat Desktop Dark</option>
               <option value="topcoat-desktop-light.html">Topcoat Desktop Light</option>
               <option value="topcoat-mobile-dark.html" selected="selected">Topcoat Mobile Dark</option>
               <option value="topcoat-mobile-light.html">Topcoat Mobile Light</option>
@@ -343,6 +344,7 @@
 .topcoat-button--large--cta {
   padding: 0 1.25rem;
   font-size: 16px;
+  font-weight: 400;
   line-height: 3rem;
   letter-spacing: 1px;
   color: #c6c8c8;
