CollectMe theme changes

--- a/demo/index.html
+++ b/demo/index.html
@@ -1515,7 +1515,7 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
   padding-right: 1rem;
   background: #e5e9e8;
   color: #454545;
-  box-shadow: inset 0 -1px #9daca9, 0 1px #d6dcdb;
+  box-shadow: none;
 }
 
 .topcoat-navigation-bar__item {
