--- a/demo/index.html
+++ b/demo/index.html
@@ -348,11 +348,11 @@
   line-height: 3rem;
   letter-spacing: 1px;
   color: #454545;
-  text-shadow: 0 1px #fff;
+  text-shadow: none;
   vertical-align: top;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
-  border: 1px solid #9daca9;
+  border: none;
   border-radius: 6px;
 }
 
@@ -371,16 +371,16 @@
 .topcoat-button--large--quiet:hover:focus,
 .topcoat-button--cta:focus,
 .topcoat-button--large--cta:focus {
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none, none;
   outline: 0;
 }
 
 .topcoat-button:active,
 .topcoat-button--large:active {
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #d2d6d6;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  box-shadow: none;
 }
 </code></pre>
                 </div>
@@ -410,8 +410,8 @@
 
 .topcoat-button--quiet:hover,
 .topcoat-button--large--quiet:hover {
-  text-shadow: 0 1px #fff;
-  border: 1px solid #9daca9;
+  text-shadow: none;
+  border: none;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -420,10 +420,10 @@
 .topcoat-button--large--quiet:active,
 .topcoat-button--large--quiet:focus:active {
   color: #454545;
-  text-shadow: 0 1px #fff;
+  text-shadow: none;
   background-color: #d2d6d6;
-  border: 1px solid #9daca9;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  border: none;
+  box-shadow: none;
 }
 </code></pre>
                 </div>
@@ -501,7 +501,7 @@
 .topcoat-button--large--cta {
   border: 1px solid #134f7f;
   background-color: #288edf;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36);
+  box-shadow: none;
   color: #fff;
   font-weight: 500;
   text-shadow: 0 -1px rgba(0,0,0,0.36);
@@ -779,8 +779,8 @@ input[type=&quot;checkbox&quot;]:checked + .topcoat-checkbox__checkmark:after {
 .topcoat-checkbox__checkmark:before {
   width: 2rem;
   height: 2rem;
-  background: #e5e9e8;
-  border: 1px solid #9daca9;
+  background: #eaedf1;
+  border: none;
   border-radius: 3px;
   box-shadow: inset 0 1px #fff;
 }
@@ -808,19 +808,19 @@ input[type=&quot;checkbox&quot;]:checked + .topcoat-checkbox__checkmark:after {
 }
 
 input[type=&quot;checkbox&quot;]:focus + .topcoat-checkbox__checkmark:before {
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none, none;
 }
 
 input[type=&quot;checkbox&quot;]:active + .topcoat-checkbox__checkmark:before {
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #d2d6d6;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  box-shadow: none;
 }
 
 input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:before {
-  border: 1px solid #9daca9;
-  background: #e5e9e8;
+  border: none;
+  background: #eaedf1;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -931,11 +931,11 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
   line-height: 3rem;
   letter-spacing: 1px;
   color: #454545;
-  text-shadow: 0 1px #fff;
+  text-shadow: none;
   vertical-align: baseline;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
-  border: 1px solid #9daca9;
+  border: none;
   border-radius: 6px;
 }
 
@@ -952,16 +952,16 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
 .topcoat-icon-button--large:focus,
 .topcoat-icon-button--large--quiet:focus,
 .topcoat-icon-button--large--quiet:hover:focus {
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none, none;
   outline: 0;
 }
 
 .topcoat-icon-button:active,
 .topcoat-icon-button--large:active {
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #d2d6d6;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  box-shadow: none;
 }
 </code></pre>
                 </div>
@@ -991,8 +991,8 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
 
 .topcoat-icon-button--quiet:hover,
 .topcoat-icon-button--large--quiet:hover {
-  text-shadow: 0 1px #fff;
-  border: 1px solid #9daca9;
+  text-shadow: none;
+  border: none;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -1001,10 +1001,10 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
 .topcoat-icon-button--large--quiet:active,
 .topcoat-icon-button--large--quiet:focus:active {
   color: #454545;
-  text-shadow: 0 1px #fff;
+  text-shadow: none;
   background-color: #d2d6d6;
-  border: 1px solid #9daca9;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  border: none;
+  box-shadow: none;
 }
 </code></pre>
                 </div>
@@ -1511,10 +1511,10 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
                   <pre class="css"><code data-language="css">
 .topcoat-navigation-bar {
   height: 4.375rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  background: #e5e9e8;
-  color: #454545;
+  padding-left: 0;
+  padding-right: 0;
+  background: #eaedf1;
+  color: #6a7686;
   box-shadow: none;
 }
 
@@ -1527,7 +1527,7 @@ input[type=&quot;checkbox&quot;]:disabled:active + .topcoat-checkbox__checkmark:
 .topcoat-navigation-bar__title {
   font-size: 1.3rem;
   font-weight: 400;
-  color: #454545;
+  color: #6a7686;
 }
 
 /*
@@ -1922,8 +1922,8 @@ input[type=&quot;radio&quot;]:checked + .topcoat-radio-button__checkmark:after {
 .topcoat-radio-button__checkmark:before {
   width: 1.875rem;
   height: 1.875rem;
-  background: #e5e9e8;
-  border: 1px solid #9daca9;
+  background: #eaedf1;
+  border: none;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -1948,19 +1948,19 @@ input[type=&quot;radio&quot;]:checked + .topcoat-radio-button__checkmark:after {
 }
 
 input[type=&quot;radio&quot;]:focus + .topcoat-radio-button__checkmark:before {
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none, none;
 }
 
 input[type=&quot;radio&quot;]:active + .topcoat-radio-button__checkmark:before {
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #d2d6d6;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  box-shadow: none;
 }
 
 input[type=&quot;radio&quot;]:disabled:active + .topcoat-radio-button__checkmark:before {
-  border: 1px solid #9daca9;
-  background: #e5e9e8;
+  border: none;
+  background: #eaedf1;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -2115,7 +2115,7 @@ limitations under the License.
                   <pre class="css"><code data-language="css">
 .topcoat-range {
   border-radius: 6px;
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #d6dcdb;
   height: 1rem;
   border-radius: 30px;
@@ -2123,7 +2123,7 @@ limitations under the License.
 
 .topcoat-range::-moz-range-track {
   border-radius: 6px;
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #d6dcdb;
   height: 1rem;
   border-radius: 30px;
@@ -2132,8 +2132,8 @@ limitations under the License.
 .topcoat-range::-webkit-slider-thumb {
   height: 3rem;
   width: 2rem;
-  background-color: #e5e9e8;
-  border: 1px solid #9daca9;
+  background-color: #eaedf1;
+  border: none;
   border-radius: 6px;
   box-shadow: inset 0 1px #fff;
 }
@@ -2141,29 +2141,29 @@ limitations under the License.
 .topcoat-range::-moz-range-thumb {
   height: 3rem;
   width: 2rem;
-  background-color: #e5e9e8;
-  border: 1px solid #9daca9;
+  background-color: #eaedf1;
+  border: none;
   border-radius: 6px;
   box-shadow: inset 0 1px #fff;
 }
 
 .topcoat-range:focus::-webkit-slider-thumb {
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none, none;
 }
 
 .topcoat-range:focus::-moz-range-thumb {
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none, none;
 }
 
 .topcoat-range:active::-webkit-slider-thumb {
-  border: 1px solid #9daca9;
+  border: none;
   box-shadow: inset 0 1px #fff;
 }
 
 .topcoat-range:active::-moz-range-thumb {
-  border: 1px solid #9daca9;
+  border: none;
   box-shadow: inset 0 1px #fff;
 }
 
@@ -2317,7 +2317,7 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
   line-height: 3rem;
   height: 3rem;
   font-size: 16px;
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #fff;
   box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
   color: #454545;
@@ -2333,8 +2333,8 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
 .topcoat-search-input--large:focus {
   background-color: #fff;
   color: #454545;
-  border: 1px solid #0036ff;
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), none;
 }
 
 .topcoat-search-input::-webkit-search-cancel-button,
@@ -2626,7 +2626,7 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
   font-size: 16px;
   padding: 0 1.25rem;
   border-radius: 6px;
-  border: 1px solid #9daca9;
+  border: none;
   overflow: hidden;
   width: 6rem;
 }
@@ -2651,9 +2651,9 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
   width: 2rem;
   border-radius: 6px;
   color: #454545;
-  text-shadow: 0 1px #fff;
-  background-color: #e5e9e8;
-  border: 1px solid #9daca9;
+  text-shadow: none;
+  background-color: #eaedf1;
+  border: none;
   margin-left: -1.3rem;
   margin-bottom: -1px;
   margin-top: -1px;
@@ -2674,13 +2674,13 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
 }
 
 .topcoat-switch__input:active + .topcoat-switch__toggle {
-  border: 1px solid #9daca9;
+  border: none;
   box-shadow: inset 0 1px #fff;
 }
 
 .topcoat-switch__input:focus + .topcoat-switch__toggle {
-  border: 1px solid #0036ff;
-  box-shadow: 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none;
 }
 
 .topcoat-switch__input:disabled + .topcoat-switch__toggle:after,
@@ -2831,11 +2831,11 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
   line-height: 3rem;
   letter-spacing: 1px;
   color: #454545;
-  text-shadow: 0 1px #fff;
+  text-shadow: none;
   vertical-align: top;
-  background-color: #e5e9e8;
+  background-color: #eaedf1;
   box-shadow: inset 0 1px #fff;
-  border-top: 1px solid #9daca9;
+  border-top: none;
 }
 
 .topcoat-tab-bar__button:active,
@@ -2849,7 +2849,7 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
 .topcoat-tab-bar__button:focus,
 .topcoat-tab-bar__button--large:focus {
   z-index: 1;
-  box-shadow: inset 0 1px rgba(255,255,255,0.36), 0 0 0 2px #6fb5f1;
+  box-shadow: none, none;
   outline: 0;
 }
 
@@ -2938,10 +2938,10 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
   font-size: 16px;
   letter-spacing: 1px;
   padding: 0 1.25rem;
-  border: 1px solid #9daca9;
+  border: none;
   border-radius: 6px;
   background-color: #fff;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  box-shadow: none;
   color: #454545;
   vertical-align: top;
 }
@@ -2950,8 +2950,8 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
 .topcoat-text-input--large:focus {
   background-color: #fff;
   color: #454545;
-  border: 1px solid #0036ff;
-  box-shadow: 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none;
 }
 
 .topcoat-text-input:disabled::-webkit-input-placeholder {
@@ -3158,9 +3158,9 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
   font-weight: 400;
   border-radius: 6px;
   line-height: 3rem;
-  border: 1px solid #9daca9;
+  border: none;
   background-color: #fff;
-  box-shadow: inset 0 1px rgba(0,0,0,0.1);
+  box-shadow: none;
   color: #454545;
   letter-spacing: 1px;
 }
@@ -3169,8 +3169,8 @@ input[type=&quot;search&quot;]::-webkit-search-cancel-button {
 .topcoat-textarea--large:focus {
   background-color: #fff;
   color: #454545;
-  border: 1px solid #0036ff;
-  box-shadow: 0 0 0 2px #6fb5f1;
+  border: none;
+  box-shadow: none;
 }
 
 .topcoat-textarea:disabled::-webkit-input-placeholder {
